[correct] spacing

--- a/css/style.css
+++ b/css/style.css
@@ -53,13 +53,13 @@ p, li{
   background-color: #0f0e17;
   box-shadow: 0 0 15px 2px black;
   margin: 0% auto;
+  margin-right: 10px;
 }
 
 .box ul{
   list-style: none;
   display: block;
   padding-top: 15px; 
-  margin-left: 110px;
 }
 
 .box ul li{
@@ -84,11 +84,12 @@ p, li{
 
 .row{
   margin: 0 auto;  
+  max-width: 1100px;
 }
 .row .box {
   float: left;
-  width: calc(25%);
-  margin: 40px 4%;  
+  width: 31%;
+  margin: 1%;
 }
 
 
